<resources>
    <string name="app_name">SI Student</string>
    <integer name="max_sitz_numb">15</integer>

    <string name="capition_anfrageliste">Anfrageliste</string>
    <string name="caption_klausur">Klausureinsichtstermine</string>
    <string name="caption_profil">Profil</string>
    <string name="caption_statistic">Statistik</string>
    <string name="caption_addTask">Anfragen erstellen</string>
    <string name="caption">SmartInsight Student</string>
    <!-- Strings related to login -->

    <!-- if server is offline, user marcengelmann.com/smart -->
    <string name="website">http://pr-android.ftm.mw.tum.de/android/smart_insight</string>

    <string name="prompt_matrikelnummber">Matrikelnummer</string>
    <string name="text_information">Auf dieser Seite werden die erstellten Anfragen aufgelistet. Anfragen fügt ihr über den Floating Action Button unten links im Feld hinzu!</string>
    <string name="calendar_information">Hier wirden die aktuellen Klausureinsichtstermine aufgelistet. Zur Zeit sind keine vorhanden!</string>

    <string name="prompt_email">E-Mail</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Zur Einsicht einchecken</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_sitNumber">Wähle einen Sitzplatz aus.</string>
    <string name="error_invalid_email">Die Matrikelnummer ist ungültig</string>
    <string name="error_invalid_password">Das Passwortformat ist ungültig</string>
    <string name="error_incorrect_password">Matrikelnummer/Passwort falsch!</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Anfragen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="checkQuestion_a">Inhalt</string>
    <string name="checkQuestion_b">Punkte</string>
    <string name="checkQuestion_c">Allgemein</string>
    <string-array name="art_of_question">
        <item>@string/checkQuestion_a</item>
        <item>@string/checkQuestion_b</item>
        <item>@string/checkQuestion_c</item>
    </string-array>

    <string name="txtSitzplatzNummer">Sitzplatznummer</string>

    <string name="bundleRequests">requests</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="exam">exam</string>
    <string name="id">id</string>
    <string name="registrationNumb">registrationNumb</string>
    <string name="sitNumb">sitNumb</string>
    <string name="didChange">didChange</string>
    <string name="loggedIn">loggedIn</string>
    <string name="calendar">calendar</string>
    <string name="takslist">tasklist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
