<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    tools:context="de.tum.mw.ftm.praktikum.smartinsight.ProfilFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Profil"
                    android:padding="4dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_name"
                    android:textSize="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max Mustermann"
                    android:id="@+id/profileName"
                    android:textSize="18dp"
                    android:enabled="false"
                    android:padding="4dp"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:padding="4dp"
                    android:text="@string/prompt_email" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max.Mustermann@tum.de"
                    android:id="@+id/profileEmail"
                    android:textSize="18dp"
                    android:enabled="false"
                    android:padding="4dp"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="4dp"
                    android:text="@string/prompt_matrikelnummber" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1245685"
                    android:padding="4dp"
                    android:id="@+id/profilMatrikel"
                    android:textSize="18dp"
                    android:enabled="false"
                    android:layout_marginBottom="8dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Klausureinsicht"
                    android:padding="4dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Klausurname"
                    android:padding="4dp"
                    android:id="@+id/profilExam"
                    android:textSize="18dp"
                    android:enabled="false"
                    android:layout_marginBottom="8dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Einstellungen"
                    android:padding="4dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/txtSitzplatzNummer"
                        android:textSize="16dp"/>
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:layout_alignParentRight="true"
                        android:id="@+id/profileSitzNumb"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        app:ms_multiline="false"
                        app:ms_enableFloatingLabel="false"
                        app:ms_enableErrorLabel="false"
                        app:ms_highlightColor="@color/colorAccent"
                        app:ms_arrowSize="16dp"
                        app:ms_alignLabels="false"/>
                </RelativeLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>
